# TreeLoc-plusplus

./: .gitignore  CMakeLists.txt  README.md
apps/: graph_opt.cpp  inter.cpp  intra.cpp
config/: default.yaml  full_oxford_evo.yaml  full_oxford_stein.yaml  full_v02.yaml  full_v03.yaml  full_v04.yaml  inter.yaml  inter_v02_v03.yaml  inter_v03_v04.yaml
data/Oxford_Evo/: TreeManagerState_0.csv  TreeManagerState_1.csv  TreeManagerState_10.csv  TreeManagerState_100.csv  TreeManagerState_1000.csv  TreeManagerState_1001.csv  TreeManagerState_1002.csv  TreeManagerState_1003.csv  TreeManagerState_1004.csv  TreeManagerState_1005.csv  TreeManagerState_1006.csv  TreeManagerState_1007.csv  TreeManagerState_1008.csv  TreeManagerState_1009.csv  TreeManagerState_101.csv  TreeManagerState_1010.csv  TreeManagerState_1011.csv  TreeManagerState_1012.csv  TreeManagerState_1013.csv  TreeManagerState_1014.csv  TreeManagerState_1015.csv  TreeManagerState_1016.csv  TreeManagerState_1017.csv  TreeManagerState_1018.csv  TreeManagerState_1019.csv  TreeManagerState_102.csv  TreeManagerState_1020.csv  TreeManagerState_1021.csv  TreeManagerState_1022.csv  TreeManagerState_1023.csv  TreeManagerState_1024.csv  TreeManagerState_1025.csv  TreeManagerState_1026.csv  TreeManagerState_1027.csv  TreeManagerState_1028.csv  TreeManagerState_1029.csv  TreeManagerState_103.csv  TreeManagerState_1030.csv  TreeManagerState_1031.csv  TreeManagerState_1032.csv  (+2296 more)
data/Oxford_Stein/: TreeManagerState_0.csv  TreeManagerState_1.csv  (+1045 more)
src/: config.cpp  descriptors.cpp  eval.cpp  io.cpp  matching.cpp
(+3790 files in other folders)
